<resources>
    <string name="app_name">فروشگاه فیملو</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_product_detail">جزئیات محصول</string>
    <string name="currency">  %1$s تومان </string>
    <string name="added_to_cart">  %1$s به سبد خرید اضافه شد </string>
    <string name="removed_from_cart">  %1$s از سبد خرید حذف شد </string>
    <string name="show_cart">مشاهده سبد</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_cart">سبد خرید شما</string>
    <string name="payment_text">قابل پرداخت</string>
    <string name="shipping_text">هزینه ارسال</string>
    <string name="total_price_text">جمع فاکتور</string>
    <string name="payout_button_text">تکمیل سفارش</string>
    <string name="cart_text">سبد خرید</string>
    <string name="delet_item_text">حذف</string>
    <string name="empty_cart_text">سبد خرید شما خالی است!</string>
    <string name="username_text">ایمیل یا شماره تماس</string>
    <string name="password_hint">رمز عبور</string>
    <string name="login_btn">ورود</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ورود یا ثبت نام</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ok_and_continue">تایید و ادامه خرید</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="title_home">صفحه اصلی</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">جستجو</string>

</resources>
