<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="-0.5dp"
    android:layout_marginLeft="-0.5dp"
    android:layout_marginRight="-0.5dp"
    android:layout_marginStart="-0.5dp"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">

        <TextView
            android:id="@+id/total_price"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/total_price_text"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/cart_summary_text_size" />

        <TextView
            android:id="@+id/s_total_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/darkGray"
            android:textDirection="rtl"
            android:textSize="@dimen/cart_summary_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/shipping"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/shipping_text"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/cart_summary_text_size" />

        <TextView
            android:id="@+id/s_shipping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/darkGray"
            android:textDirection="rtl"
            android:textSize="@dimen/cart_summary_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/payout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/payment_text"
            android:textColor="@color/paymentColor"
            android:textSize="@dimen/cart_summary_text_size" />

        <TextView
            android:id="@+id/s_payment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/paymentColor"
            android:textDirection="rtl"
            android:textSize="@dimen/cart_summary_text_size" />


    </LinearLayout>

    <Button
        android:id="@+id/payment"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/paymentColor"
        android:elevation="3dp"
        android:onClick="goToLogin"
        android:text="@string/payout_button_text"
        android:textColor="@color/white"
        android:textSize="@dimen/cart_summary_text_size" />

</LinearLayout>